Specifically fixing the spacing under file fields
http://cl.ly/image/082F2a0z302d see how the help text is too close?

--- a/src/sass/partials/form/_general.scss
+++ b/src/sass/partials/form/_general.scss
@@ -103,7 +103,6 @@ label i {
 .form-horizontal input + .help-block, 
 .form-horizontal select + .help-block, 
 .form-horizontal textarea + .help-block {
-	margin-top: 5px;
 	margin-bottom: 0;
 }
 
